Updated about section

--- a/index.html
+++ b/index.html
@@ -25,23 +25,14 @@
 		</header>
 		<nav id="nav">
 			<ul>
-				<li><a href="#one" class="active">About</a></li>
-				<li><a href="#two">Things I Can Do</a></li>
-				<li><a href="#three">A Few Accomplishments</a></li>
-				<li><a href="#four">Contact</a></li>
+				<li><a href="#one" class="active">Who I Am</a></li>
+				<li><a href="#two">Tech Stack</a></li>
+				<li><a href="#three">Projects</a></li>
+				<li><a href="#four">Let's Connect</a></li>
 			</ul>
 		</nav>
 		<footer>
 			<ul class="icons">
-				<li>
-					<a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a>
-				</li>
-				<li>
-					<a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-				</li>
-				<li>
-					<a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-				</li>
 				<li>
 					<a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
 				</li>
@@ -63,10 +54,9 @@
 				</div>
 				<div class="container">
 					<header class="major">
-						<h2>Read Only</h2>
+						<h2>Who I Am</h2>
 						<p>
-							Just an incredibly simple responsive site<br />
-							template freebie by <a href="http://html5up.net">HTML5 UP</a>.
+							I'm a full stack web developer with a passion for building clean, intuitive user experiences from front to back.
 						</p>
 					</header>
 					<p>
