Updated section one, Who I Am

--- a/index.html
+++ b/index.html
@@ -60,13 +60,14 @@
 						</p>
 					</header>
 					<p>
-						Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus
-						col. Commodo id in arcu ante lorem ipsum sed accumsan erat
-						praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo.
-						Vis aliquet tortor ultricies non ante erat nunc integer eu ante
-						ornare amet commetus vestibulum blandit integer in curae ac
-						faucibus integer non. Adipiscing cubilia elementum.
-					</p>
+						I earned my undergraduate degree in design and theater from the University of Iowa, where I developed an early love for systems, storytelling, and user experience. I spent over a decade in social work, supporting at-risk youth, families navigating substance use, and clients managing mental health challenges. That experience shaped my approach to problem-solving, empathy, and working across diverse teams.
+					  </p>
+					  <p>
+						In 2020, I returned to school at Kirkwood for software development. I thrived there, regularly pushing beyond coursework, taking on extra challenges, and building complex solutions. In 2022, I started in QA where I not only learned the ins and outs of testing, but also began building internal tools to support other developers. One of my key contributions was creating automation tools that ran overnight, handling repetitive data cleanup and verification tasks — freeing up developer time and improving team efficiency without interrupting their daily workflows.
+					  </p>
+					  <p>
+						After graduating, I was brought on as a full stack web developer. Within six months, I led a complete redesign and rebranding of our company website. Since then, I’ve focused on modernizing our codebase — transitioning from a deprecated Knockout.js architecture to Vue.js — while preparing for another full design overhaul. I enjoy finding elegant, scalable solutions, and creating tools that make life easier for users and developers alike.
+					  </p>
 				</div>
 			</section>
 
