Section two compelted

--- a/index.html
+++ b/index.html
@@ -74,20 +74,18 @@
 			<!-- Two -->
 			<section id="two">
 				<div class="container">
-					<h3>Things I Can Do</h3>
+					<h3>Tech Stack & Skills</h3>
 					<p>
-						Integer eu ante ornare amet commetus vestibulum blandit integer in
-						curae ac faucibus integer non. Adipiscing cubilia elementum
-						integer lorem ipsum dolor sit amet.
+						Here are some of the tools, frameworks, and technologies I use regularly in my development work.
 					</p>
 					<ul class="feature-icons">
-						<li class="icon solid fa-code">Write all the code</li>
-						<li class="icon solid fa-cubes">Stack small boxes</li>
-						<li class="icon solid fa-book">Read books and stuff</li>
-						<li class="icon solid fa-coffee">Drink much coffee</li>
-						<li class="icon solid fa-bolt">Lightning bolt</li>
-						<li class="icon solid fa-users">Shadow clone technique</li>
-					</ul>
+						<li class="icon solid fa-laptop-code">Full Stack Development</li>
+						<li class="icon brands fa-js">JavaScript / Vue.js</li>
+						<li class="icon solid fa-database">SQL / Database Design</li>
+						<li class="icon brands fa-html5">HTML5 & CSS3</li>
+						<li class="icon brands fa-git-alt">Git / GitHub</li>
+						<li class="icon solid fa-tools">QA Automation & Internal Tools</li>
+					  </ul>
 				</div>
 			</section>
 
