updated contact us

--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
 					</p>
 					<ul class="contact">
 						<li>
-						  <a href="ajkorte18@gmail.com" class="icon solid fa-envelope">
-							<span class="label">Email</span>
+						  <a class="icon solid fa-envelope">
+							<span class="label">Email: ajkorte18@gmail.com</span>
 						  </a>
 						</li>
 						<li>
-						  <a href="https://github.com/ajkorte" class="icon brands fa-github" target="_blank">
-							<span class="label">GitHub</span>
+						  <a class="icon brands fa-github" target="_blank">
+							<span class="label">GitHub: https://github.com/ajkorte</span>
 						  </a>
 						</li>
 					</ul>
