fixing contact us

--- a/index.html
+++ b/index.html
@@ -142,16 +142,12 @@
 					</p>
 					<ul class="contact">
 						<li>
-						  <a class="icon solid fa-envelope">
-							<span class="label">Email: ajkorte18@gmail.com</span>
-						  </a>
+						  <span class="icon solid fa-envelope"> ajkorte18@gmail.com</span>
 						</li>
 						<li>
-						  <a class="icon brands fa-github" target="_blank">
-							<span class="label">GitHub: https://github.com/ajkorte</span>
-						  </a>
+						  <span class="icon brands fa-github"> github.com/ajkorte</span>
 						</li>
-					</ul>
+					  </ul>
 				</div>
 			</section>
 
