updated some bits and pieces

--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
 			<span class="image avatar"><img src="images/Alex_Korte.jpg" alt="" /></span>
 			<h1 id="logo"><a href="#">Alex Korte</a></h1>
 			<p>
-				Bridging logic and creativity — I build full stack web experiences that are both functional and user-friendly.
+				Bridging logic and creativity — I build full stack web experiences that are both functional and
+				user-friendly.
 			</p>
 		</header>
 		<nav id="nav">
 			<ul>
 				<li><a href="#one" class="active">Who I Am</a></li>
 				<li><a href="#two">Tech Stack</a></li>
-				<li><a href="#three">Projects</a></li>
+				<li><a href="#three">Projects and Accomplishments</a></li>
 				<li><a href="#four">Let's Connect</a></li>
 			</ul>
 		</nav>
 		<footer>
 			<ul class="icons">
 				<li>
-					<a href="ajkorte18@gmail.com" class="icon brands fa-github"><span class="label">Github</span></a>
+					<a href="#" class="icon brands fa-github"><span class="label">Github</span></a>
 				</li>
 				<li>
-					<a href="https://github.com/ajkorte" class="icon solid fa-envelope"><span class="label">Email</span></a>
+					<a href="#" class="icon solid fa-envelope"><span
+							class="label">Email</span></a>
 				</li>
 			</ul>
 		</footer>
@@ -56,18 +58,32 @@
 					<header class="major">
 						<h2>Who I Am</h2>
 						<p>
-							I'm a full stack web developer with a passion for building clean, intuitive user experiences from front to back.
+							I'm a full stack web developer with a passion for building clean, intuitive user experiences
+							from front to back.
 						</p>
 					</header>
 					<p>
-						I earned my undergraduate degree in design and theater from the University of Iowa, where I developed an early love for systems, storytelling, and user experience. I spent over a decade in social work, supporting at-risk youth, families navigating substance use, and clients managing mental health challenges. That experience shaped my approach to problem-solving, empathy, and working across diverse teams.
-					  </p>
-					  <p>
-						In 2020, I returned to school at Kirkwood for software development. I thrived there, regularly pushing beyond coursework, taking on extra challenges, and building complex solutions. In 2022, I started in QA where I not only learned the ins and outs of testing, but also began building internal tools to support other developers. One of my key contributions was creating automation tools that ran overnight, handling repetitive data cleanup and verification tasks — freeing up developer time and improving team efficiency without interrupting their daily workflows.
-					  </p>
-					  <p>
-						After graduating, I was brought on as a full stack web developer. Within six months, I led a complete redesign and rebranding of our company website. Since then, I’ve focused on modernizing our codebase — transitioning from a deprecated Knockout.js architecture to Vue.js — while preparing for another full design overhaul. I enjoy finding elegant, scalable solutions, and creating tools that make life easier for users and developers alike.
-					  </p>
+						I earned my undergraduate degree in design and theater from the University of Iowa, where I
+						developed an early love for systems, storytelling, and user experience. I spent over a decade in
+						social work, supporting at-risk youth, families navigating substance use, and clients managing
+						mental health challenges. That experience shaped my approach to problem-solving, empathy, and
+						working across diverse teams.
+					</p>
+					<p>
+						In 2020, I returned to school at Kirkwood for software development. I thrived there, regularly
+						pushing beyond coursework, taking on extra challenges, and building complex solutions. In 2022,
+						I started in QA where I not only learned the ins and outs of testing, but also began building
+						internal tools to support other developers. One of my key contributions was creating automation
+						tools that ran overnight, handling repetitive data cleanup and verification tasks — freeing up
+						developer time and improving team efficiency without interrupting their daily workflows.
+					</p>
+					<p>
+						After graduating, I was brought on as a full stack web developer. Within six months, I led a
+						complete redesign and rebranding of our company website. Since then, I’ve focused on modernizing
+						our codebase — transitioning from a deprecated Knockout.js architecture to Vue.js — while
+						preparing for another full design overhaul. I enjoy finding elegant, scalable solutions, and
+						creating tools that make life easier for users and developers alike.
+					</p>
 				</div>
 			</section>
 
@@ -79,13 +95,16 @@
 						Here are some of the tools, frameworks, and technologies I use regularly in my development work.
 					</p>
 					<ul class="feature-icons">
-						<li class="icon solid fa-laptop-code">Full Stack Development</li>
-						<li class="icon brands fa-js">JavaScript / Vue.js</li>
-						<li class="icon solid fa-database">SQL / Database Design</li>
-						<li class="icon brands fa-html5">HTML5 & CSS3</li>
-						<li class="icon brands fa-git-alt">Git / GitHub</li>
-						<li class="icon solid fa-tools">QA Automation & Internal Tools</li>
-					  </ul>
+						<li class="icon solid fa-laptop-code">Full Stack Web Development (Front-End & Back-End)</li>
+						<li class="icon brands fa-js">JavaScript (Vue.js, Knockout.js)</li>
+						<li class="icon solid fa-code">C# / ASP.NET</li>
+						<li class="icon solid fa-database">SQL Development & Relational Databases</li>
+						<li class="icon brands fa-html5">Semantic HTML5 & Modern CSS3</li>
+						<li class="icon brands fa-git-alt">Git, GitHub & GitExtensions</li>
+						<li class="icon solid fa-sitemap">Agile Development (SCRUM methodology)</li>
+						<li class="icon solid fa-tools">QA Tools & Task Automation (Internal Tools)</li>
+						<li class="icon solid fa-users">Team Collaboration & Problem Solving</li>
+					</ul>
 				</div>
 			</section>
 
@@ -94,38 +113,33 @@
 				<div class="container">
 					<h3>Projects and Accomplishments</h3>
 					<p>
-						Integer eu ante ornare amet commetus vestibulum blandit integer in
-						curae ac faucibus integer non. Adipiscing cubilia elementum
-						integer. Integer eu ante ornare amet commetus.
+						Here are some of the projects I’ve worked on, and a few of my proudest accomplishments.
 					</p>
 					<div class="features">
 						<article>
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Possibly broke spacetime</h4>
+								<h4>Project 1</h4>
 								<p>
-									Integer eu ante ornare amet commetus vestibulum blandit
-									integer in curae ac faucibus integer adipiscing ornare amet.
+									project description goes here.
 								</p>
 							</div>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Terraformed a small moon</h4>
+								<h4>Project 2</h4>
 								<p>
-									Integer eu ante ornare amet commetus vestibulum blandit
-									integer in curae ac faucibus integer adipiscing ornare amet.
+									project description goes here.
 								</p>
 							</div>
 						</article>
 						<article>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 							<div class="inner">
-								<h4>Snapped dark matter in the wild</h4>
+								<h4>Project 3</h4>
 								<p>
-									Integer eu ante ornare amet commetus vestibulum blandit
-									integer in curae ac faucibus integer adipiscing ornare amet.
+									project description goes here.
 								</p>
 							</div>
 						</article>
@@ -138,16 +152,17 @@
 				<div class="container">
 					<h3>Let's Connect</h3>
 					<p>
-						Want to get in touch? I’m always open to new projects, collaborations, or a good conversation about code.
+						Want to get in touch? I’m always open to new projects, collaborations, or a good conversation
+						about code.
 					</p>
 					<ul class="contact">
 						<li>
-						  <span class="icon solid fa-envelope"> ajkorte18@gmail.com</span>
+							<span class="icon solid fa-envelope"> ajkorte18@gmail.com</span>
 						</li>
 						<li>
-						  <span class="icon brands fa-github"> github.com/ajkorte</span>
+							<span class="icon brands fa-github"> github.com/ajkorte</span>
 						</li>
-					  </ul>
+					</ul>
 				</div>
 			</section>
 
